[package]

name = "conduit-utils"
version = "0.6.2"
authors = ["wycats@gmail.com",
           "Alex Crichton <alex@alexcrichton.com>"]
description = "Various utilities for conduit-based crates"
license = "MIT"
repository = "https://github.com/conduit-rust/conduit-utils"

[dependencies]
conduit = "0.6"
semver = "0.1.0"

[dev-dependencies]
conduit-test = "0.6"
